Updates from code inspection (#163)