@@ -6,6 +6,7 @@ import org.labkey.api.view.template.ClientDependency;
 import org.labkey.genotypeassays.GenotypeAssaysModule;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * User: bimber
@@ -16,6 +17,6 @@ public class PublishSBTResultsButton extends SimpleButtonConfigFactory
 {
     public PublishSBTResultsButton()
     {
-        super(ModuleLoader.getInstance().getModule(GenotypeAssaysModule.class), "Publish/Cache Selected", "GenotypeAssays.window.PublishResultsWindow.buttonHandler(dataRegionName);", Arrays.asList(ClientDependency.supplierFromPath("genotypeassays/window/PublishResultsWindow.js")));
+        super(ModuleLoader.getInstance().getModule(GenotypeAssaysModule.class), "Publish/Cache Selected", "GenotypeAssays.window.PublishResultsWindow.buttonHandler(dataRegionName);", List.of(ClientDependency.supplierFromPath("genotypeassays/window/PublishResultsWindow.js")));
     }
 }
